colors to labels

--- a/config/locales/enums.pt-BR.yml
+++ b/config/locales/enums.pt-BR.yml
@@ -15,3 +15,11 @@
       active: 
         enable: Sim
         disable: Não
+    label:
+      color:
+        danger: '#dc3545'
+        primary: '#007bff'
+        success: '#28a745'
+        warning: '#ffc107'
+        dark: '#343a40'
+        light: '#f8f9fa'
