Validações ao criar site novo e imagens default

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -2,22 +2,22 @@
   activerecord:
     errors:
       messages:
-        accepted: "must be accepted"
-        blank: "can't be blank"
-        confirmation: "doesn't match confirmation"
-        empty: "can't be empty"
-        equal_to: "must be equal to {{count}}"
-        even: "must be even"
-        exclusion: "is reserved"
-        greater_than: "must be greater than {{count}}"
-        greater_than_or_equal_to: "must be greater than or equal to {{count}}"
-        inclusion: "is not included in the list"
-        invalid: "is invalid"
-        less_than: "must be less than {{count}}"
-        less_than_or_equal_to: "must be less than or equal to {{count}}"
-        not_a_number: "is not a number"
-        odd: "must be odd"
-        taken: "is already taken"
-        too_long: "is too long (maximum is {{count}} characters)"
-        too_short: "is too short (minimum is {{count}} characters)"
-        wrong_length: "is the wrong length (should be {{count}} characters)"
+        accepted: "deve ser aceito"
+        blank: "não pode ficar em branco"
+        confirmation: "não é igual a senha"
+        empty: "não pode estar vazio"
+        equal_to: "deve ser igual a {{count}}"
+        even: "deve ser par"
+        exclusion: "está reservado"
+        greater_than: "deve ser maior que {{count}}"
+        greater_than_or_equal_to: "deve ser maior ou igual a {{count}}"
+        inclusion: "não está incluído na lista"
+        invalid: "é inválido"
+        less_than: "deve ser menor que {{count}}"
+        less_than_or_equal_to: "deve ser menor ou igual a {{count}}"
+        not_a_number: "não é um número"
+        odd: "deve ser ímpar"
+        taken: "já está em uso"
+        too_long: "é muito longo (o máximo é de {{count}} caracteres)"
+        too_short: "é muito curto (o mínimo é {{count}} caracteres)"
+        wrong_length: "é o tamanho errado (deve ser {{count}} caracteres)"
